# not-a-launcher

./: .gitignore  Cargo.toml  package.json  tsconfig.json
src/: config.rs  index.ts  main.rs  modrinth.rs  version.d.ts
