[package]
name = "modrinth-bulk"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.10.2"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
